manifests/apps/jellyfin/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: jellyfin-gateway
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: mainissuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      hostname: "media.krea.to"
      port: 8443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-krea.to-tls
            namespace: traefik
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-main-route
  namespace: jellyfin
spec:
  parentRefs:
    - name: jellyfin-gateway
  hostnames:
    - "media.krea.to"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /Users/
      backendRefs:
        - name: jellyfin
          port: 8096
          filters:
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: ratelimit
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
