manifests/apps/jellyfin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-main-route
  namespace: jellyfin
spec:
  parentRefs:
    - name: gateway
      namespace: cert-manager
  hostnames:
    - "media.krea.to"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /Users/
      backendRefs:
        - name: jellyfin
          port: 8096
          filters:
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: ratelimit
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
